tests/trybuild-failures/not_comparison.stderr
error[E0308]: mismatched types
 --> $DIR/not_comparison.rs:4:16
  |
4 |     assertify!(1 + 2);
  |     -----------^^^^^-
  |     |          |
  |     |          expected `bool`, found integer
  |     expected due to this
